--- a/interface.css
+++ b/interface.css
@@ -106,6 +106,7 @@ h1{
 
 .quizzes {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding: 2em;
     background-color: #f8f9ff;
@@ -125,9 +126,7 @@ h1{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px;
     min-width: 150px;
-
 }
-
 .quiz:hover {
     background-color: #8d64e8;
 }
@@ -145,9 +144,6 @@ h1{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
     max-width: 250px;
-}
-.quiz-link{
-    text-decoration: none;  /* ********change***********/
 }
 .add-quiz:hover {
     background-color: #8d64e8;
